--- a/constructionOrgManagement/Views/DataManipulationView.axaml
+++ b/constructionOrgManagement/Views/DataManipulationView.axaml
@@ -15,19 +15,28 @@
 			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 
-		<StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5">
-			<TextBlock Text="Таблица:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+		<StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5" Spacing="10">
+			<TextBlock Name="tableTextBlock" Text="Таблица:" VerticalAlignment="Center"/>
 			<ComboBox ItemsSource="{Binding AvailableTables}"
                       SelectedItem="{Binding SelectedTable}"
-                      Width="200" Margin="0,0,10,0"
-					  PlaceholderText="Выберите таблицу"/>
+                      Width="200"
+                      PlaceholderText="Выберите таблицу"/>
 
-			<Button Content="Обновить" Command="{Binding RefreshDataCommand}" Margin="0,0,10,0"/>
+			<Button Content="Обновить" Command="{Binding RefreshDataCommand}" Width="110" HorizontalContentAlignment="Center"/>
 
-			<TextBlock Text="Поиск:" VerticalAlignment="Center" Margin="0,0,5,0"/>
+			<Button Content="Добавить запись" Command="{Binding AddCommand}" Width="170" HorizontalContentAlignment="Center"/>
+		</StackPanel>
+
+		<StackPanel Grid.Row="1" Orientation="Horizontal" Margin="5" Spacing="10">
+			<TextBlock Text="Поле:" VerticalAlignment="Center" Width="{Binding #tableTextBlock.Bounds.Width}"/>
+			<ComboBox ItemsSource="{Binding FilterColumns}"
+                      SelectedItem="{Binding FilterColumn}"
+                      Width="200"
+                      PlaceholderText="Выберите поле"/>
+
+			<TextBlock Text="Поиск:" VerticalAlignment="Center"/>
 			<TextBox Text="{Binding FilterText, UpdateSourceTrigger=PropertyChanged}"
-                     Width="200" Margin="0,0,5,0"/>
-			<Button Content="Применить фильтр" Command="{Binding ApplyFilterCommand}"/>
+                     Width="235" Watermark="Введите подстроку для поиска"/>
 		</StackPanel>
 
 		<DataGrid Name="tableDataGrid"
