--- a/constructionOrgManagement/Views/DataEditView.axaml
+++ b/constructionOrgManagement/Views/DataEditView.axaml
@@ -12,7 +12,9 @@
 			<TextBlock Text="{Binding SelectedTable, StringFormat='Редактирование таблицы {0}'}"
                       FontSize="18" FontWeight="Bold" HorizontalAlignment="Center"/>
 
-			<ItemsControl ItemsSource="{Binding EditControls}">
+			<ItemsControl ItemsSource="{Binding EditControls}"
+						  BorderBrush="Gray"
+						  BorderThickness="1">
 				<ItemsControl.ItemTemplate>
 					<DataTemplate>
 						<ContentControl Content="{Binding}"/>
