--- a/constructionOrgManagement/Views/QueriesView.axaml
+++ b/constructionOrgManagement/Views/QueriesView.axaml
@@ -10,7 +10,6 @@
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="10"/>
 			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 
@@ -20,10 +19,11 @@
 				   FontWeight="Bold" 
 				   Margin="0,0,0,10"
                    TextWrapping="Wrap"
+				   TextAlignment="Center"
 				   HorizontalAlignment="Center"/>
 
 		<Border Grid.Row="1" BorderBrush="#DDDDDD" BorderThickness="1"
-               CornerRadius="5" Padding="15">
+               CornerRadius="5" Padding="15" Margin="20 0">
 			<StackPanel>
 				<ItemsControl ItemsSource="{Binding QueriesControls}">
 					<ItemsControl.ItemTemplate>
@@ -33,16 +33,32 @@
 					</ItemsControl.ItemTemplate>
 				</ItemsControl>
 
-				<Button Content="Выполнить запрос"
-                       Command="{Binding ExecuteQueryCommand}"
-                       HorizontalAlignment="Right"
-                       Margin="0,10,0,0"
-                       Padding="20,5"/>
+				<StackPanel Orientation="Horizontal"
+							HorizontalAlignment="Right">
+					<ComboBox MinWidth="130"
+							  Margin="5"
+							  PlaceholderText="Выберите поле"
+							  DisplayMemberBinding="{Binding Header}"
+							  SelectedValueBinding="{Binding Header}"
+							  ItemsSource="{Binding DataGridColumns}"
+							  SelectedValue="{Binding SelectedSearchColumn}"/>
+					
+					<TextBox Watermark="Введите значение"
+							 Margin="5"
+							 MinWidth="140"
+							 Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"/>
+					
+					<Button Content="Выполнить запрос"
+					       Command="{Binding ExecuteQueryCommand}"
+					       HorizontalAlignment="Right"
+					       Margin="5"
+					       Padding="20,5"/>
+				</StackPanel>
 			</StackPanel>
 		</Border>
 
 		<DataGrid Name="queriesDataGrid"
-				  Grid.Row="3"
+				  Grid.Row="2"
                   ItemsSource="{Binding CurrentQueryData}"
                   AutoGenerateColumns="False"
                   IsReadOnly="True"
@@ -54,7 +70,7 @@
 				  ColumnWidth="*"
 				  CanUserResizeColumns="True"
 				  CanUserReorderColumns="True"
-				  CanUserSortColumns="False">
+				  CanUserSortColumns="True">
 			<DataGrid.Columns></DataGrid.Columns>
 		</DataGrid>
 		
